# UseCmakeBuildLib

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xong/usecmakebuildlib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_a_hello_test.cpp  native_a_jsoncpp_test.cpp  native_lib.cpp  native_so_hello_test.cpp  native_so_jsoncpp_test.cpp
app/src/main/java/com/xong/jni/: NativeHelloALib.java  NativeHelloSoLib.java  NativeJsonALib.java  NativeJsonSoLib.java  Nativelib.java
app/src/main/java/com/xong/usecmakebuildlib/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xong/usecmakebuildlib/: ExampleUnitTest.java
export/libsohello/include/: sohello.h
libajsoncpp/: build.gradle
libajsoncpp/src/main/: AndroidManifest.xml
libajsoncpp/src/main/cpp/: CMakeLists.txt
libajsoncpp/src/main/cpp/jsoncpp/: CMakeLists.txt
libajsoncpp/src/main/res/values/: strings.xml
libasimple/: build.gradle
libasimple/src/main/: AndroidManifest.xml
libasimple/src/main/cpp/: CMakeLists.txt
libasimple/src/main/cpp/hello/: CMakeLists.txt
libasimple/src/main/cpp/hello/src/: ahello.cpp  ahello.h  libahello.cpp  libahello.h
libasimple/src/main/res/values/: strings.xml
libcode/: build.gradle
libcode/src/main/: AndroidManifest.xml
libcode/src/main/cpp/: CMakeLists.txt  useCode.cpp
libcode/src/main/cpp/jsoncpp/: json_tool.h  json_value.cpp
libcode/src/main/cpp/moudle/jsoncpp/: json_reader.cpp
libcode/src/main/cpp/share/: useCode.cpp
libcode/src/main/java/com/xong/libcode/jni/: NativeCode.java
libcode/src/main/res/values/: strings.xml
libsojsoncpp/: build.gradle
libsojsoncpp/src/main/: AndroidManifest.xml
libsojsoncpp/src/main/cpp/jsoncpp/: CMakeLists.txt
libsojsoncpp/src/main/cpp/jsoncpp/src/: json_writer.cpp
libsojsoncpp/src/main/res/values/: strings.xml
libsosimple/: build.gradle
libsosimple/src/main/: AndroidManifest.xml
libsosimple/src/main/cpp/: CMakeLists.txt
libsosimple/src/main/cpp/hello/: CMakeLists.txt
libsosimple/src/main/cpp/hello/src/: sohello.cpp
libsosimple/src/main/res/values/: strings.xml
